Issue #3218194: Style the RTL Layout Builder for the Alignment

--- a/scss/theme/plugins/horizontal-alignment.scss
+++ b/scss/theme/plugins/horizontal-alignment.scss
@@ -32,3 +32,24 @@ $horizontal_alignment_icon_path: '../../../images/plugins/horizontal-alignment/'
   }
 
 }
+
+[dir=rtl] body  {
+  #drupal-off-canvas,
+  #layout-builder-modal {
+    .field-horizontal-alignment .fieldset-wrapper > div > div {
+      input {
+        + label {
+          .input-icon {
+            &[class*="justify-content-start"] {
+              background-image: url($horizontal_alignment_icon_path + 'align-end.svg');
+            }
+
+            &[class*="justify-content-end"] {
+              background-image: url($horizontal_alignment_icon_path + 'align-start.svg');
+            }
+          }
+        }
+      }
+    }
+  }
+}
